2004-01-06  Alexandre Oliva  <aoliva@redhat.com>

	* ld-frv: Update .d files with correct addresses displayed for
	dynamic relocations.
	2003-12-02  Alexandre Oliva  <aoliva@redhat.com>
	* ld-frv/fdpic1.s (.D0): Move to separate data section.
	2003-11-28  Alexandre Oliva  <aoliva@redhat.com>
	* ld-frv/fdpic-static-1.d, ld-frv/fdpic-static-2.d,
	* ld-frv/fdpic-static-7.d, ld-frv/fdpic-static-8.d: Update to
	reflect EMBEDDED= change in linker script.
	2003-11-27  Alexandre Oliva  <aoliva@redhat.com>
	* ld-frv: Update .d files to reflect changes in the page size, the
	addition of a stack segment, the use of a NULL function descriptor
	for weakundef functions and the change in the lazy funcdesc_value
	in-place addend value.
	2003-11-05  Alexandre Oliva  <aoliva@redhat.com>
	* lib/ld-lib.exp (is_elf_format): Match frv-uclinux.
	2003-10-06  Alexandre Oliva  <aoliva@redhat.com>
	* ld-frv/fdpic-static-1.d, ld-frv/fdpic-static-2.d,
	ld-frv/fdpic-static-7.d, ld-frv/fdpic-static-8.d: Addresses are
	now _gp-based, not \.rofixup-based.
	* ld-frv/fdpic-static-6.d: Likewise.  Match warning about
	relocation to different section.
	2003-09-30  Alexandre Oliva  <aoliva@redhat.com>
	* ld-frv/fdpic.exp: Add -melf32frvfd to LDFLAGS.
	2003-09-19  Alexandre Oliva  <aoliva@redhat.com>
	* ld-frv/fdpic7.s, ld-frv/fdpic-static-7.d, ld-frv/fdpic-pie-7.d,
	ld-frv/fdpic-shared-7.d: New.
	* ld-frv/fdpic8.s, ld-frv/fdpic-static-8.d, ld-frv/fdpic-pie-8.d,
	ld-frv/fdpic-shared-8.d: New.
	* ld-frv/fdpic-pie-8-fail.d, ld-frv/fdpic-shared-8-fail.d: New.
	* ld-frv/fdpic.exp: Run them.
	* ld-frv/fdpic8.ldv, ld-frv/fdpic8min.ldv: New.
	2003-09-18  Alexandre Oliva  <aoliva@redhat.com>
	* ld-frv/fdpic5.s, ld-frv/fdpic-static-5.d, ld-frv/fdpic-pie-5.d,
	ld-frv/fdpic-shared-5.d: New.
	* ld-frv/fdpic6.s, ld-frv/fdpic-static-6.d, ld-frv/fdpic-pie-6.d,
	ld-frv/fdpic-shared-6.d: New.
	* ld-frv/fdpic.exp: Run them.
	* ld-frv/fdpic*.d: Add -mfdpic to assembler flags.  Updated.