@@ -1,0 +1,8 @@
+
+tmpdir/arm-lib-plt32.so:     file format elf32-littlearm
+
+DYNAMIC RELOCATION RECORDS
+OFFSET   TYPE              VALUE 
+.* R_ARM_JUMP_SLOT   app_func2
+
+
