@@ -1,0 +1,8 @@
+
+tmpdir/arm-lib.so:     file format elf32-littlearm
+
+DYNAMIC RELOCATION RECORDS
+OFFSET   TYPE              VALUE 
+.* R_ARM_PC24        app_func2
+
+
