@@ -1,3 +1,10 @@
+2004-01-06  Daniel Jacobowitz  <drow@mvista.com>
+
+	* ld-arm/arm-app.d, ld-arm/arm-app.r, ld-arm/arm-app.s,
+	ld-arm/arm-lib.d, ld-arm/arm-lib.r, ld-arm/arm-lib.s,
+	ld-arm/arm-lib-plt32.d, ld-arm/arm-lib-plt32.r,
+	ld-arm/arm-lib-plt32.s, ld-arm/arm-elf.exp: New files.
+
 2004-01-06  Alexandre Oliva  <aoliva@redhat.com>
 
 	* ld-frv: Update .d files with correct addresses displayed for
